--- a/markdown-cv/nginx.conf
+++ b/markdown-cv/nginx.conf
@@ -1,9 +1,12 @@
-events {}
+worker_processes  1;
+
+events {
+  worker_connections  1024;
+}
 
 http {
   server {
-    listen 80;
-    listen [::]:80;
+    listen 0.0.0.0:80;
     server_name _;
 
     location / {
